kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sso-jrione-dev
  name: sso-jrione-dev
  namespace: sso-jrione-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-jrione-dev
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sso-jrione-dev
    spec:
      containers:
      - image: ghcr.io/jrione/sso-jrione:v0.0.4
        name: sso-jrione-dev
        ports:
        - containerPort: 8000
        resources: {}
      imagePullSecrets:
      - name: ghcr-regcred
status: {}
