kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sso-jrione-dev
  name: sso-jrione-dev
  namespace: sso-jrione-dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: sso-jrione-dev
  type: ClusterIP
