kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso-jrione-dev
  namespace: sso-jrione-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: klodpler-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - auth.jri.one
    secretName: sso-jrione-dev-tls
  rules:
  - host: auth.jri.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sso-jrione-dev
            port:
              number: 80
